--- a/package.json
+++ b/package.json
@@ -1,14 +1,37 @@
 {
   "name": "capacitor-save-as",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Capacitor plugin for Android and iOS Save As picker using Storage Access Framework (SAF) and UIDocumentPickerViewController.",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "author": "adsurkasur",
   "license": "MIT",
-  "keywords": ["capacitor", "plugin", "android", "ios", "save as", "save-as", "export", "SAF", "UIDocumentPickerViewController"],
-  "files": ["src", "android", "ios", "plugin.json"],
+  "keywords": [
+    "capacitor",
+    "plugin",
+    "android",
+    "ios",
+    "save as",
+    "save-as",
+    "export",
+    "SAF",
+    "UIDocumentPickerViewController"
+  ],
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "android",
+    "ios",
+    "plugin.json"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepack": "npm run build"
+  },
   "capacitor": {
-    "platforms": ["android", "ios"]
+    "platforms": [
+      "android",
+      "ios"
+    ]
   },
   "peerDependencies": {
     "@capacitor/core": ">=5.0.0"
@@ -23,5 +46,8 @@
   "homepage": "https://github.com/adsurkasur/capacitor-save-as",
   "bugs": {
     "url": "https://github.com/adsurkasur/capacitor-save-as/issues"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
